# 2FA

./: Makefile  README.md  asset-manifest.json  index.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature---improve.md  feature---new.md  task.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
chess-data/: .gitignore  chess-puzzles.py  chess_puzzles.json  pyproject.toml
evaluation/: data.csv  data.ipynb
my-app/: package-lock.json  package.json
my-app/src/: App.css  App.tsx  index.tsx
my-app/src/components/: AnagramPuzzle.tsx  BlackjackPuzzle.tsx  CardCounting.tsx  ChessPuzzle.tsx  CustomDropdown.tsx  CustomToggleSwitch.tsx  PasswordForm.tsx  Timer.tsx  index.ts
my-app/src/data/: chess-puzzles-easy.json  chess-puzzles-hard.json  chess-puzzles-medium.json  chess-puzzles.json
my-app/src/passwordScreen/: ChessPassword.tsx  PasswordForm.tsx  PasswordScreen.tsx
my-app/src/screens/: AnagramScreen.tsx  AuthenticatedScreen.tsx  CardCountingScreen.tsx  ChessScreen.tsx  PasswordScreen.tsx  PuzzleScreen.tsx  UnauthenticatedScreen.tsx  index.ts
my-app/src/styles/: BlackjackPuzzle.css  CardCounting.css
my-app/src/utils/: useTimer.tsx
static/css/: main.9687c40e.css  main.9687c40e.css.map
static/js/: main.096b3b0e.js  main.096b3b0e.js.LICENSE.txt  main.096b3b0e.js.map
